--- a/maket/#source/scss/___nav.scss
+++ b/maket/#source/scss/___nav.scss
@@ -36,6 +36,7 @@
             &__navigation {
                 display: block;
                 margin-top: 24px;
+                height: 100vh;
 
                 display: flex;
                 gap: 24px;
