--- a/maket/css/style.css
+++ b/maket/css/style.css
@@ -158,6 +158,7 @@ h6 {
 .header.blur .header__navigation {
   display: block;
   margin-top: 24px;
+  height: 100vh;
   display: flex;
   gap: 24px;
   flex-direction: column;
@@ -705,7 +706,6 @@ h6 {
   height: -moz-fit-content;
   height: fit-content;
   transition: 0.3s;
-  overflow: hidden;
 }
 .footer__text.hidden {
   display: -webkit-box;
