--- a/maket/#source/scss/___nav.scss
+++ b/maket/#source/scss/___nav.scss
@@ -301,7 +301,7 @@
                 flex: 0 0 9em;
             }
             &:nth-child(3) {
-                font-size: 12px;
+                font-size: 28px;
             }
         }
 
@@ -330,10 +330,11 @@
         }
 
         &-text {
-            font-size: 7px;
+            font-size: 0.45em;
             display: flex;
             align-items: center;
             gap: 2px;
+            line-height: 1em;
             & span {
                 font-weight: 800;
                 &.bold {
